# Chess

./: CMakeLists.txt  board.cpp  board.h  plan
Pieces/: Bishop.cpp  Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
